V2.2.1-SNAPSHOT * Class name on top of every test and test method over description at left panel
       * Tooltips for buttons
       * Collapse/Expand test methods
       * Smaller sizes for regression columns
       * Different msgs in Release status for empty and skipped runs
V2.2.0 * Skip Execution Mode
       * Bug Fixes
V2.1.0 * Style sheet Changes
       * In case of Tests with multi classes report every class in Class.results.html file
V2.0.2 * Bug Fixes
V2.0.1 * Initial Import