@@ -99,5 +99,9 @@ class=Class
 Description=Description
 Priority=Priority
 KnownIssue=Known Issue
-hoverTextHidePassTest=Click or Press Any key to collapse/expand All Tests and Configuration Methods
+hoverTextHidePassTest=Click or Press Any key to collapse/expand All Failed Tests and Configuration Methods
 hoverTextHidePassSuites=Click or Press Any key to Hide/Show All Passed Suites
+collapse=Collapse All
+expand=Expand All
+showall=Show All
+showonlyfailures=Show Only Failures
