@@ -16,7 +16,7 @@
 	#if ($testResult.getStatus()==2)
 	<tr>
 		<td class="time">$testResult.startMillis</td>
-		<td class="header failedConfig" colspan="4" onClick="toggleElement('$generatedID','block');changeSingleIcon('span-$generatedID');" title="Click to expand/collapse">
+		<td class="header failedConfig" colspan="4">
 		<div style="float:left;">$messages.getString("class")&nbsp;:&nbsp;$testResult.InstanceName</div>
 		<div style="float:right;">$messages.getString("failedConfiguration")&nbsp;<span id='span-$generatedID' class="glyphicon glyphicon-menu-down"></span></div>
 		</td>
@@ -61,7 +61,11 @@
 		## Show logger output for the test.
 		#set ($output = $utils.getTestOutput($testResult))
 		#if ($output.size() > 0)
-			<div class="stackTrace" id="$generatedID">
+			#if ($testResult.getStatus()==2)
+				<div class="noCollapse" id="$generatedID">
+			#else
+				<div class="stackTrace" id="$generatedID">
+			#end
 			#foreach( $line in $output )
 		    	#if ($meta.shouldEscapeOutput())
 		        	$utils.escapeHTMLString($line)<br>
