@@ -61,7 +61,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 	        <div class="text-right">
-	            <button id="hideResults" type="button" class="btn-default" onclick="collapseExpand(this);" onkeypress="collapseExpand(this);" class="btn pull-right" title="$messages.getString("hoverTextHidePassTest")">$messages.getString("collapse")</button>
+	            <button id="hideResults" type="button" class="btn-danger" onclick="collapseExpand(this);" onkeypress="collapseExpand(this);" class="btn pull-right" title="$messages.getString("hoverTextHidePassTest")">$messages.getString("showonlyfailures")</button>
 	        </div>
 	    </div>
 	</div>
