@@ -16,7 +16,7 @@
 	<div class="col-xs-12">
 	<h3 class="normal">$messages.getString("totalResults")</h3>
         <div class="text-right">
-            <button id="hideResults" type="button" class="btn-success" onclick="hidePass(this);" class="btn pull-right" title="$messages.getString("hoverTextHidePassSuites")">$messages.getString("hidePass")</button>
+            <button id="hideResults" type="button" class="btn-danger" onclick="hidePass(this);" class="btn pull-right" title="$messages.getString("hoverTextHidePassSuites")">$messages.getString("showonlyfailures")</button>
         </div>
     </div>
 </div>
